2013-05-30 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/sugar/functions/all.h : bug fixed for the NA=false case
        * include/Rcpp/sugar/functions/is_na.h : header
        * include/Rcpp/sugar/functions/is_finite.h : added sugar is_finite function
        * include/Rcpp/traits/is_finite.h : added is_finite trait
        * unitTests/runit.sugar.R : added test for is_finite
        * unitTests/cpp/S4.cpp : new cpp file to host S4 unit tests
        * unitTests/runit.S4.R : rework unit tests to use attributes
        * unitTests/runit.Reference.R : unit tests for Rcpp::Reference
        * unitTests/cpp/Reference.cpp : unit tests c++ code
        
2013-05-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/api.cpp: Minor tweak for internal formatting

2013-05-24  J.J. Allaire <jj@rstudio.org>

        * R/Attributes.R: Disallow compilation for files that don't have
        extensions supported by R CMD SHLIB

2013-05-21  J.J. Allaire <jj@rstudio.org>

        * R/Attributes.R: Lookup plugins in inline package if they aren't
        found within the Rcpp package
        * man/pluginsAttribute.Rd: Documentation updates.

2013-05-17  J.J. Allaire <jj@rstudio.org>

        * src/attributes.cpp: prevent gc problems with RNGScope destructor
        in attributes generated functions; don't include package header file
        in generated cpp exports file
        * src/api.cpp: use unsigned long for RNG scope counter

2013-04-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/api.cpp (Rcpp): No longer use Rd_format(Real|Complex) which is
	a very verboten R internal; formatting to string is now very bare bones

2013-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Improved use as well as a new possible overrride of
	/usr/bin/install_name_tool on OS X, once again contributed by Simon

2013-04-16  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/sugar/functions/na_omit.h : new function na_omit to remove