@@ -35,6 +35,7 @@
 #include <Rcpp/sugar/functions/all.h>
 #include <Rcpp/sugar/functions/is_na.h>
 #include <Rcpp/sugar/functions/is_finite.h>
+#include <Rcpp/sugar/functions/is_infinite.h>
 #include <Rcpp/sugar/functions/na_omit.h>
 #include <Rcpp/sugar/functions/seq_along.h>
 #include <Rcpp/sugar/functions/sapply.h>
