@@ -185,8 +185,13 @@ LogicalVector runit_isfinite( NumericVector xx){
 }
 
 // [[Rcpp::export]]
+LogicalVector runit_isinfinite( NumericVector xx){
+    return is_infinite(xx) ;
+}
+
+// [[Rcpp::export]]
 LogicalVector runit_isna_isna( NumericVector xx ){
-    return wrap( is_na( is_na( xx ) ) ) ;
+    return is_na( is_na( xx ) ) ;
 }
 
 // [[Rcpp::export]]
