@@ -1,3 +1,10 @@
+2013-05-31 Romain Francois <romain@r-enthusiasts.com>
+
+        * unitTests/runit.sugar.R : new test for is_infinite
+        * unitTests/cpp/sugar.cpp : new test for is_infinite
+        * include/Rcpp/sugar/functions/is_infinite.h : new function is_infinite
+        * include/Rcpp/traits/is_infinite.h : new function is_infinite
+        
 2013-05-30 Romain Francois <romain@r-enthusiasts.com>
 
         * include/Rcpp/sugar/functions/all.h : bug fixed for the NA=false case
